new model moved to main

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <!-- 3D AR Viewer -->
   <model-viewer id="viewer" 
-                src="tajmahal.glb" 
+                src="model.glb" 
                 alt="Taj Mahal"
                 ar 
                 ar-modes="webxr scene-viewer quick-look" 
